# arena-ai

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
assets/: asset_manifest.json
assets/sounds/: audio_manifest.json  downloaded_audio_manifest.csv
docs/: ASSETS.md  BUILD.md  MODEL.md  QUALITY.md  STATISTICAL_AUDIT.md
modeling/worldcup_2026_ml/models/: runtime_prediction_cache.pkl
modeling/worldcup_2026_ml/reports/: bolao_monte_carlo_stability.json  bolao_top10_bias_audit.csv  bolao_top10_bias_audit.json  sota_ablation_study.csv  sota_block_bootstrap_intervals.csv  sota_calibration_bins.csv  sota_champion_odds.csv  sota_class_calibration_summary.csv  sota_dixon_coles_rho_sensitivity.csv  sota_group_standings_seed.csv  sota_internal_frontier_experiments.csv  sota_match_probabilities.csv  sota_model_report.json  sota_monte_carlo_stability.csv  sota_monte_carlo_stability.json  (+13 more)
scripts/: audio_qa.py  benchmark_monte_carlo_workers.py  bolao_mc_stability.py  bolao_qa.py  bolao_top10_bias_audit.py  build_assets_qa.py  build_runtime_prediction_cache.py  capture_visual_qa.py  generate_flag_sprites.py  generate_parallax_turf.py  model_stats_qa.py  monte_carlo_stability.py  package_release_artifacts.py  prepare_cinematic_sprites.py  promote_audio_assets.py  smoke_model.py  validate_visuals.py
src/arena_ai/: __init__.py  audio.py  audio_manifest.py  bolao.py  cinematic_uniforms.py  main.py  rendering.py  ui.py  worldcup_model.py
win/: .env.example  .gitignore  bootstrap-rdp.cmd  bootstrap-windows.ps1  build-remote.ps1  remote-build.sh
(+11 files in other folders)
